welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:7: error: not found: value A
	if (n==A) {
               ^BDRBuggle:9: error: not found: value B
	} else if (n==B) {
                      ^BDRBuggle:12: error: not found: value L
	} else if (n==L) {
                      ^BDRBuggle:15: error: not found: value R
	} else if (n==R) {
                      ^BDRBuggle:18: error: not found: value X
	} else if (n==X) {
                      ^BDRBuggle:22: error: not found: value Z
	} else if (n==Z) {
                      ^